Bug Fixed: Changing theme after two map loads caused default and dark mode to be mixed.
Bug Fixed: A new change listener was added to zoomSlider at each map load leading to serious problems when zooming in.

Changed: Changed the way the Controller saves the list of themes which can be used. Each menu item now has a path to its theme, instead of using a HashMap.

--- a/app/src/main/resources/view.css
+++ b/app/src/main/resources/view.css
@@ -44,17 +44,3 @@
     -fx-border-color: rgba(255, 0, 0, 0.4);
     -fx-background-color: rgba(255, 255, 255, 0.4);
 }
-
-#informationPane:hover {
-    -fx-border-color: rgba(0, 0, 0, 0.7);
-    -fx-background-color: rgba(255, 255, 255, 0.7);
-}
-
-#informationPane:hover #bounds {
-    -fx-border-color: rgba(255, 0, 0, 0.7);
-    -fx-background-color: rgba(255, 255, 255, 0.7);
-}
-
-#informationPane:hover .label {
-    -fx-text-fill: rgba(0, 0, 0, 0.7);
-}
